コンタクトフォームにfunctionsのAPIエンドポイントを指定

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="heading">お問い合わせフォーム</div>
-    <form action="#" method="post">
+    <form action="https://contact-form-functions.azurewebsites.net/api/contact-form?" method="post">
       <div class="form-field">
         <label for="name">名前 <span>*</span></label>
         <input type="text" id="name" name="name" class="input-field" required>
